# ActsTrackingPipeline

./: .clangd  .gitignore  Archive.h  CMakeLists.txt  README.md
.github/workflows/: sonarcloud.yml
EventData/: CMakeLists.txt  LinkDef.h
EventData/include/ActsLUXEPipeline/: DataContainers.hpp  LUXEDataContainers.hpp  LUXEIndexSourceLink.hpp  LUXEMeasurement.hpp  LUXEROOTDataReader.hpp  LUXESimpleSourceLink.hpp  ROOTDictDefs.h  SimpleSourceLink.hpp
EventData/src/: ROOTDataReader.cpp
Geometry/: CMakeLists.txt
Geometry/src/: E320Geometry.cpp  E320GeometryIdGenerator.cpp  LUXEGeometry.cpp  LUXEGeometryIdGenerator.cpp
Infrastructure/: CMakeLists.txt
Infrastructure/include/ActsLUXEPipeline/: DataHandle.hpp  IAlgorithm.hpp  IContextDecorator.hpp  IReader.hpp  IWriter.hpp  ProcessCode.hpp  RandomNumbers.hpp  SequenceElement.hpp  Sequencer.hpp
Infrastructure/src/: IAlgorithm.cpp  RandomNumbers.cpp  SequenceElement.cpp  Sequencer.cpp  WhiteBoard.cpp
MagneticField/: CMakeLists.txt
MagneticField/include/ActsLUXEPipeline/: BinnedMagneticField.hpp  ConstantBoundedField.hpp  DipoleMagField.hpp  E320MagField.hpp  E320MagneticField.hpp  IMagneticField.hpp  LUXEBinnedMagneticField.hpp  LUXEMagneticField.hpp  LxBFields.hpp  MagneticFields.hpp  QuadrupoleMagField.hpp
MagneticField/src/: BinnedMagneticField.cpp  CompositeMagField.cpp  E320MagField.cpp  LUXEBinnedMagneticField.cpp  LUXEMagneticField.cpp  LxBFields.cpp  QuadrupoleMagField.cpp
Material/: CMakeLists.txt
Material/include/ActsLUXEPipeline/: CoreMaterialMapping.hpp  IMaterialWriter.hpp  JsonMaterialWriter.hpp  MaterialValidation.hpp  ROOTMaterialTrackReader.hpp  ROOTMaterialTrackWriter.hpp
Material/src/: CoreMaterialMapping.cpp  JsonMaterialWriter.cpp  MaterialValidation.cpp  ROOTMaterialTrackReader.cpp  ROOTMaterialTrackWriter.cpp
Navigation/: CMakeLists.txt
Navigation/include/ActsLUXEPipeline/: LUXEEffectiveMaterial.hpp  LUXEMeasurement.hpp  LUXEMeasurementsCreator.hpp  LUXENavigator.hpp  SimMeasurementBoostIO.hpp
Readout/: CMakeLists.txt
Readout/include/ActsLUXEPipeline/: E320ROOTDataReader.hpp  LUXEROOTDataReader.hpp  PhoenixTrackWriter.hpp  ROOTDataReader.hpp  ROOTFittedTrackWriter.hpp
Run/: AlignmentRun.cpp  CMakeLists.txt  EnergyPositionHistosRun.cpp  FastSimRun.cpp  FullSimTrackingRun.cpp  FullTrackingRun.cpp  LookupDataGenerationRun.cpp  LookupDataValidationRun.cpp  MaterialMappingRun.cpp  MaterialValidationRun.cpp  ParticleShooterRun.cpp  PathSeedingRun.cpp  PipelineMain.cpp  SeedingAnalysisRun.cpp  SimAlignmentRun.cpp  TestRun.cpp  TruthTrackingRun.cpp  run_pipeline.sh
Run/Confs/: AlignmentRun.conf  FastSimRun.conf  FullSimTrackingRun.conf  FullTrackingRun.conf  Pipeline.conf  Preprocessing.conf  SimAlignmentRun.conf  TrackCleaning.conf
Simulation/: CMakeLists.txt
Simulation/src/: MeasurementsCreator.cpp
TempEventData/: CMakeLists.txt
TempEventData/include/ActsLUXEPipeline/: LUXESimpleSourceLink.hpp
TrackFinding/: CMakeLists.txt
TrackFinding/include/ActsLUXEPipeline/: CKFTrackFindingAlgorithm.hpp  CsvLookupTableProvider.hpp  CsvLookupTableWriter.hpp  E320PathWidthProvider.hpp  E320SourceLinkGrid.hpp  ForwardOrderedIntersectionFinder.hpp  IIntersectionFinder.hpp  ILookupProvider.hpp  IPathWidthProvider.hpp  ISourceLinkBinner.hpp  IdealSeeder.hpp  IdealSeedingAlgorithm.hpp  LUXEIdealSeeder.hpp  LUXELookupTableMaker.hpp  LUXEPathSeeder.hpp  LUXEPathWidthProvider.hpp  LUXESeeder.hpp  LUXESourceLinkBinner.hpp  LUXESourceLinkGrid.hpp  LookupDataWriter.hpp  LookupMaker.hpp  PathSeeder.hpp  PathSeedingAlgorithm.hpp  ROOTLookupDataWriter.hpp  TryAllTrackFindingAlgorithm.hpp  createHistogram.cpp
TrackFinding/include/ActsLUXEPipeline/detail/: SeedTree.hpp
TrackFinding/src/: PathSeeder.cpp
TrackFitting/: CMakeLists.txt
Utilities/: CMakeLists.txt
Utilities/include/ActsLUXEPipeline/: LUXEMeasurementsCreator.hpp
Zcode/: CMakeLists.txt
Zcode/include/ActsLUXEPipeline/: LUXEPathSeeder.hpp  Utils.hpp  createHistogram.cpp  seedAnalysis.cpp
Zstuff/: EX1_lookup_table.txt  X1X4_lookup_table.txt  X1Y4_lookup_table.txt  Z1Z4_lookup_table.txt  ettgeom_magnet_pdc_tracker.gdml  hist_data_o.root  lxgeomdump_ip_tracker_positron.gdml  lxgeomdump_stave_positron.gdml  lxgeomdump_tracker_infra.gdml  output_file.root  seed_data.root  volumes.mtl
Zstuff/Zcode/: Makefile  cmake_install.cmake
Zstuff/Zlookups/: EX1_lookup_table.txt  X1X4_lookup_table.txt  X1Y4_lookup_table.txt  Z1Z4_lookup_table.txt
Zstuff/Zroot_files/: hist_data.root  hist_data_uniformX.root  seed_data.root  seed_data_backup.root  seed_data_fin.root
src/Alignment/: AlignmentAlgorithm.cpp  AlignmentAlgorithmFunction.cpp  AlignmentContext.cpp  CMakeLists.txt
src/Analysis/: CMakeLists.txt  TrackCleaningAlgorithm.cpp
src/Geometry/: ApollonGeometry.cpp  ApollonGeometryConstraints.cpp  CMakeLists.txt  E320Geometry.cpp  E320GeometryIdGenerator.cpp  LUXEGeometry.cpp  LUXEGeometryIdGenerator.cpp
src/Infrastructure/: AlgorithmRegistry.cpp  CMakeLists.txt  IAlgorithm.cpp  RandomNumbers.cpp  ReaderRegistry.cpp  SequenceElement.cpp  Sequencer.cpp  WhiteBoard.cpp  WriterRegistry.cpp  buildAlgorithm.cpp  buildReader.cpp  buildWriter.cpp
src/Io/: AlignmentParametersProvider.cpp  AlignmentParametersWriter.cpp  AlignmentResultWriter.cpp  ApollonRootDataReader.cpp  ApollonRootSimDataReader.cpp  CMakeLists.txt  DummyReader.cpp  E320RootDataReader.cpp  E320RootSimDataReader.cpp  JsonTrackLookupReader.cpp  JsonTrackLookupWriter.cpp  RootFittedSimTrackWriter.cpp  RootIPPositronTrackParametersReader.cpp  RootMaterialTrackReader.cpp  RootMaterialTrackWriter.cpp  RootMeasurementWriter.cpp  RootNoamSplitDataReader.cpp  RootSeedWriter.cpp  RootSimClusterReader.cpp  RootSimClusterWriter.cpp  RootSimDataReader.cpp  RootSimSeedWriter.cpp  RootSimTrackCandidateWriter.cpp  RootSimTrackReader.cpp  RootSimTrackWriter.cpp  RootTrackCandidateWriter.cpp  RootTrackCleaningWriter.cpp  RootTrackLookupValidationWriter.cpp  RootTrackParamsReader.cpp  RootTrackReader.cpp  (+1 more)
src/Preprocessing/: AnalysisFunctions.cpp  CMakeLists.txt  Preprocessing.cpp
(+234 files in other folders)
